--- a/assets/style/scss/_nav.scss
+++ b/assets/style/scss/_nav.scss
@@ -25,13 +25,6 @@ nav {
     .navbar-nav {
       margin-top: 30px;
       margin-left: auto;
-
-      .nav-item {
-
-        span {
-          display: inline-block !important;
-        }
-      }
     }
   }
 
